padding issue with hover, spacing for long recipe name, icons fixed

--- a/v2/src/components/recipeBoxes/recipeBox.css
+++ b/v2/src/components/recipeBoxes/recipeBox.css
@@ -34,7 +34,8 @@
 }
 
 .recipe_box:hover.large .recipe_box__full_image {
-  display: block;
+  display: flex;
+  opacity: 1;
 }
 
 .recipe_box::before {
@@ -108,15 +109,11 @@
   height: 100%;
   width: 100%;
 
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  justify-content: center;
+  align-items: center;
 
   opacity: 0;
 
   transition: opacity 100ms linear;
-}
-
-.recipe_box__full_image:hover {
-  opacity: 1;
+  transition-delay: 100ms;
 }
