--- a/v2/src/css/custom.css
+++ b/v2/src/css/custom.css
@@ -628,7 +628,7 @@ details:not([open]) > *:not(summary) { /* Workaround to make the details' conten
 
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 
   padding-left: .5em;
 
@@ -637,6 +637,10 @@ details:not([open]) > *:not(summary) { /* Workaround to make the details' conten
 
 .recipe_selector__dropdown.open {
   border: 1px solid var(--ifm-color-primary);
+}
+
+.recipe_selector__dropdown span {
+  margin-right: .5em;
 }
 
 .recipe_selector__dropdown div {
